eks/opensearch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: opensearch.18.193.176.154.nip.io  # Измени на свой хост или оставь nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opensearch-cluster-master
            port:
              number: 9200
